Updated Cloud Function and Spring Boot Configuration