@@ -1,6 +1,7 @@
 package com.springimplant.cloudfunction.repository;
 
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.springframework.stereotype.Repository;
@@ -15,6 +16,6 @@ public class OrderDao {
 				new Order(102,"Book",999,1),
 				new Order(278,"Book",1466,1),
 				new Order(953,"Jeans",4499,1)
-				).toList();
+				).collect(Collectors.toList());
 	}
 }
